Show upload tab on insert image dialog only if datasources for rte are set, fix rte dialogs z-index - #4800

--- a/ui/scss/src/forms-engine.scss
+++ b/ui/scss/src/forms-engine.scss
@@ -100,7 +100,7 @@ div.xdsoft_datetimepicker {
 }
 
 .tox-tinymce-aux {
-  z-index: 1040 !important;
+  z-index: 1038 !important;
 }
 
 .tox.tox-tinymce.tox-fullscreen {
